# AI-Dietitian

./: .gitignore  README.md  pyproject.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/dietitian/: database.py  main.py  requirements.txt
artifacts/dietitian/.replit-artifact/: artifact.edit.toml
artifacts/dietitian/database/: dietitian.db
artifacts/dietitian/models/: __init__.py
artifacts/dietitian/routers/: __init__.py  auth.py  badges.py  chatbot.py  diet.py  profile.py  progress.py
artifacts/dietitian/static/css/: custom.css
artifacts/dietitian/templates/: base.html  chatbot.html  dashboard.html  diet_plan.html  landing.html  onboarding.html  profile.html  progress.html  tracker.html
attached_assets/: Pasted-Build-a-full-stack-AI-Dietitian-Web-Application-using-F_1779851874364.txt
my_venv/: pyvenv.cfg
my_venv/Scripts/: activate  activate.bat  activate.fish
